--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </P>
 <center>
 	<H1>Welcome to the Squirrel-Navigator website</h1>
-<P ALIGN=CENTER STYLE="margin-bottom: 0in"><FONT SIZE=5><B>Squirrel-Navigator Is a unique and fast text-based web browser.</B></FONT></P>
-<h1><A HREF="https://squirrelcom.github.io/seARchter/"><FONT SIZE=5><B>let’s seARch! some things or type: squirrelcom.github.io/seARchter/</h1>
-<h1><A HREF="https://github.com/squirrelcom/Squirrel-Navigator"><h1>Don't have Squirrel-Navigator,</h1>
+<h1>Squirrel-Navigator Is a unique and fast text-based web browser.</h1>
+<h1><A HREF="https://squirrelcom.github.io/seARchter/">let’s seARch! some things or type: squirrelcom.github.io/seARchter/</A></h1>
+<h1><A HREF="https://github.com/squirrelcom/Squirrel-Navigator">Don't have Squirrel-Navigator,</A></h1>
 	<h1>Squirrel-Navigator!! Is in Beta</h1>
 <h1>So if you’ve got a bug just post it on the issues section of the GitHub page</h1>
 <h1>Copyright © 2021 squ:rre/ industries and Squirrel-Navigator!!</h1>
