--- a/index.html
+++ b/index.html
@@ -26,12 +26,24 @@
 <P STYLE="margin-bottom: 0in"><BR>
 </P>
 <center>
-	<H1>Welcome to the Squirrel-Navigator website</h1>
-<h1>Squirrel-Navigator Is a unique and fast text-based web browser.</h1>
-<h1><A HREF="https://squirrelcom.github.io/seARchter/">let’s seARch! some things or type: squirrelcom.github.io/seARchter/</A></h1>
-<h1><A HREF="https://github.com/squirrelcom/Squirrel-Navigator">Don't have Squirrel-Navigator,</A></h1>
-	<h1>Squirrel-Navigator!! Is in Beta</h1>
-<h1>So if you’ve got a bug just post it on the issues section of the GitHub page</h1>
-<h1>Copyright © 2021 squ:rre/ industries and Squirrel-Navigator!!</h1>
+	<H1>Welcome to the Squirrel-Navigator and SLP website</h1>
+	                              
+<H1>              (*********(    
+<H1>              /,,*    /*,,*  
+<H1>          ****/,,*      ,,*  
+<H1>          *,**/,,,*****,,*#  
+<H1>          *,**/,,*           
+<H1>     (/////(**/,,*           
+<H1>  (///*   /////**/           
+<H1>  (///    *,,**//////(       
+<H1>    ////////(////////(       
+<H1>            ////              
+<H1>   ///#     #///              
+<H1>    (/////////(               
+<h1>Squirrel-Navigator Is a unique and fast text-based SLP browser.</h1>
+<h2><A HREF="https://github.com/squirrelcom/SLP">Don't have Squirrel-Navigator, or SLP</A></h2>
+	<h4>Squirrel-Navigator!! Is in Beta</h4>
+<h4>So if you’ve got a bug just post it on the issues section of the GitHub page</h4>
+<i>Copyright © 2021 squ:rre/ industries and Squirrel-Navigator!!</i>
 </BODY>
 </HTML>
