--- a/index.htm
+++ b/index.htm
@@ -775,7 +775,7 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>                              </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:1'>
@@ -785,9 +785,9 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>              </span><span
-  style='mso-spacerun:yes'> </span>(*********(<span
-  style='mso-spacerun:yes'>    </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><span
+  style='mso-spacerun:yes'>Â </span>(*********(<span
+  style='mso-spacerun:yes'>Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:2'>
@@ -796,8 +796,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>               </span>/,,*<span
-  style='mso-spacerun:yes'>    </span>/*,,*<span style='mso-spacerun:yes'> 
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span>/,,*<span
+  style='mso-spacerun:yes'>Â Â Â  </span>/*,,*<span style='mso-spacerun:yes'>Â 
   </span><o:p></o:p></span></p>
   </td>
  </tr>
@@ -808,8 +808,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>           </span>****/,,*<span
-  style='mso-spacerun:yes'>      </span>,,*<span style='mso-spacerun:yes'> 
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span>****/,,*<span
+  style='mso-spacerun:yes'>Â Â Â Â Â  </span>,,*<span style='mso-spacerun:yes'>Â 
   </span><o:p></o:p></span></p>
   </td>
  </tr>
@@ -819,8 +819,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>           </span>*,**/,,,*****,,*#<span
-  style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span>*,**/,,,*****,,*#<span
+  style='mso-spacerun:yes'>Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:5'>
@@ -830,8 +830,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>           </span>*,**/,,*<span
-  style='mso-spacerun:yes'>           </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span>*,**/,,*<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:6'>
@@ -840,8 +840,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>      </span>(/////(**/,,*<span
-  style='mso-spacerun:yes'>           </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â  </span>(/////(**/,,*<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:7'>
@@ -851,9 +851,9 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>   </span>(///*<span
-  style='mso-spacerun:yes'>   </span>/////**/<span
-  style='mso-spacerun:yes'>           </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â  </span>(///*<span
+  style='mso-spacerun:yes'>Â Â  </span>/////**/<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:8'>
@@ -862,9 +862,9 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>   </span>(///<span
-  style='mso-spacerun:yes'>    </span>*,,**//////(<span
-  style='mso-spacerun:yes'>       </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â  </span>(///<span
+  style='mso-spacerun:yes'>Â Â Â  </span>*,,**//////(<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:9'>
@@ -874,8 +874,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>     </span>////////(////////(<span
-  style='mso-spacerun:yes'>       </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â  </span>////////(////////(<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:10'>
@@ -884,8 +884,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>            </span>////<span
-  style='mso-spacerun:yes'>              </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â  </span>////<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:11'>
@@ -895,9 +895,9 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>   </span>///#<span
-  style='mso-spacerun:yes'>     </span>#///<span
-  style='mso-spacerun:yes'>              </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â  </span>///#<span
+  style='mso-spacerun:yes'>Â Â Â Â  </span>#///<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:12;mso-yfti-lastrow:yes'>
@@ -906,8 +906,8 @@ div.WordSection1
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   15.0pt'><span style='font-size:9.0pt;font-family:Consolas;mso-fareast-font-family:
   "Times New Roman";mso-bidi-font-family:"Segoe UI";color:#24292E;mso-fareast-language:
-  EN-GB'><span style='mso-spacerun:yes'>    </span>(/////////(<span
-  style='mso-spacerun:yes'>               </span><o:p></o:p></span></p>
+  EN-GB'><span style='mso-spacerun:yes'>Â Â Â  </span>(/////////(<span
+  style='mso-spacerun:yes'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span><o:p></o:p></span></p>
   </td>
  </tr>
 </table>
@@ -927,14 +927,14 @@ Consolas;color:#24292E;background:white'><o:p>&nbsp;</o:p></span></p>
 Consolas;color:#24292E;background:white'>Squirrel-Navigator!! Is in Beta</span><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:9.0pt;line-height:107%;font-family:
-Consolas;color:#24292E;background:white'>So if you’ve got a bug just post it on
+Consolas;color:#24292E;background:white'>So if youÂ’ve got a bug just post it on
 the issues section of the GitHub page</span><o:p></o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:9.0pt;line-height:107%;font-family:
 Consolas;color:#24292E;background:white'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal><span style='font-size:9.0pt;line-height:107%;font-family:
-Consolas;color:#24292E;background:white'>Copyright © 2021 <span class=SpellE><span
+Consolas;color:#24292E;background:white'>Copyright Â© 2021 <span class=SpellE><span
 class=GramE>squ:rre</span></span>/ industries and Squirrel-Navigator!!</span></span><b
 style='mso-bidi-font-weight:normal'><o:p></o:p></b></p>
 
